[package]
name = "openlineplanner-backend"
version = "0.1.0"
edition = "2021"
authors = ["TheNewCivilian <hi@xatellite.space>"]
description = "Backend service for OpenLinePlanner - public transport network prototyping"
license = "GPL-3.0"
repository = "https://github.com/TheNewCivilian/OpenLinePlanner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.4.0", features = ["rustls"] }
anyhow = "1.0.79"
config = "0.14.0"
fern = { version = "0.6.2", features = ["colored"] }
geo = { version = "0.27.0", features = ["use-serde"] }
geojson = { git = "https://github.com/zandemax/geojson", features = ["geo-types"] }
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
osmgraphing = "1.1.1"
osmpbfreader = "0.16.0"
petgraph = "0.6.4"
rand = "0.8.5"
tinytemplate = "1.2.1"
reqwest = { version = "0.11.20", features = ["json", "cookies", "rustls-tls"], default-features = false }
bytes = "1.5.0"
openhousepopulator = { rev = "v0.2.4", git ="https://github.com/xatellite/OpenHousePopulator" }
json = "0.12.4"
acc_reader = "2.0.0"
uuid = { version = "1.6.1", features = ["v4", "serde", "v5"] }
predicates = "3.0.3"
postcard = { version = "1.0.4", features = ["alloc"] }
rayon = "1.8.0"
datatypes = { rev = "v0.8.0", git = "https://github.com/xatellite/OpenLinePlanner" }
validator = { version = "0.16.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.50"
axum = "0.7.2"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }

[dev-dependencies]
tokio-test = "0.4.3"
pretty_assertions = "1.4.0"
rstest = "0.18.2"
